cmake_minimum_required(VERSION 2.6)
project (OcclusionCRF)
find_package(OpenCV REQUIRED)
#find_package(OpenGM REQUIRED)
set(PROJECT_LINK_LIBS cv_utils.so /opt/gurobi650/linux64/lib/libgurobi_c++.a /opt/gurobi650/linux64/lib/libgurobi65.so)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS "-std=c++0x -w")
link_directories(../../cv_utils)
include_directories(../../cv_utils /opt/gurobi650/linux64/include)
file(GLOB SOURCES "*.cpp")
add_executable(OcclusionCRF ${SOURCES})
target_link_libraries(OcclusionCRF ${OpenCV_LIBS})
#target_link_libraries(OcclusionCRF ${OpenGM_LIBS})
target_link_libraries(OcclusionCRF ${PROJECT_LINK_LIBS})

#find_package(Boost COMPONENTS system REQUIRED)
#target_link_libraries(OcclusionCRF ${Boost_SYSTEM_LIBRARY})